--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js"
-
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +17,7 @@
     "supertest": "^2.0.1"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "helmet": "^3.4.0",
     "http-status": "^0.2.5",
